--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="center">
       <section class="container">
-        <img src="./images/boat_above.jpg" alt="boat" class="image-boat" />
+        <img src="boat_above.jpg" alt="boat" class="image-boat" />
 
         <div class="right-main">
           <div class="right-text">
@@ -26,7 +26,7 @@
               <p>Fjord and sea fishing</p>
               <div class="circle">
                 <img
-                  src="./images/chevron-right.svg"
+                  src="chevron-right.svg"
                   alt="icon arrow right"
                   class="svg-icon invert-arrow"
                 />
@@ -36,7 +36,7 @@
               <p>Freshwater fishing</p>
               <div class="circle">
                 <img
-                  src="./images/chevron-right.svg"
+                  src="chevron-right.svg"
                   alt="icon arrow right"
                   class="svg-icon invert-arrow"
                 />
@@ -46,7 +46,7 @@
               <p>Winter fishing</p>
               <div class="circle">
                 <img
-                  src="./images/chevron-right.svg"
+                  src="chevron-right.svg"
                   alt="icon arrow right"
                   class="svg-icon invert-arrow"
                 />
@@ -56,7 +56,7 @@
               <p>Discover more</p>
               <div class="circle">
                 <img
-                  src="./images/chevron-right.svg"
+                  src="chevron-right.svg"
                   alt="icon arrow right"
                   class="svg-icon invert-on"
                 />
